--- a/style.css
+++ b/style.css
@@ -30,3 +30,42 @@ a {
     font-size: large;
     text-decoration: none;
 }
+
+.section-1 {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #1F2937;
+    color: white;
+    padding: 25px;
+}
+
+.img-1 {
+    width: 250px;
+}
+
+.section-1-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 500px;
+}
+
+.s-1-header {
+    font-size: 48px;
+    font-weight: 800px;
+}
+
+.s-1-caption {
+    font-size: 18px;
+}
+
+button {
+    background-color: #3883F6;
+    color: white;
+    border-radius: 25px;
+    width: 132px;
+    font-size: 24px;
+}
