--- a/style.css
+++ b/style.css
@@ -73,3 +73,36 @@ button {
 body {
     margin: 0;
 }
+
+.section-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.s-2-a {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 30px;
+}
+
+.s-2-b {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.s-2-img {
+    width: 175px;
+    height: 175px;
+    border: 2px solid #1F2937;
+    border-radius: 25px;
+}
+
+h2 {
+    margin-bottom: auto;
+    font-size: 36px;
+    font-weight: 800;
+    padding: 20px;
+}
