--- a/style.css
+++ b/style.css
@@ -125,3 +125,39 @@ section {
     align-items: center;
     flex-direction: column;
 }
+
+.section-3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 32px;
+}
+
+#blue {
+    background-color: #3883F6;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 25px;
+    width: 75%;
+    border-radius: 25px;
+}
+
+h4 {
+    font-size: large;
+    font-weight: bolder;
+    color: white;
+}
+
+.s-3-sub {
+    color: white;
+}
+
+button {
+    background-color: #3883F6;
+    color: white;
+    border-radius: 25px;
+    width: 132px;
+    font-size: 24px;
+    border: 2px solid white;
+}
