--- a/style.css
+++ b/style.css
@@ -161,3 +161,12 @@ button {
     font-size: 24px;
     border: 2px solid white;
 }
+
+footer {
+    background-color: #1F2937;
+    color: white;
+    text-align: center;
+    padding: 25px;
+    font-size: 18px;
+    font-weight: bold;
+}
